--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"license": "ISC",
 	"description": "",
 	"scripts": {
-		"dev": "nodemon ./src/server.js",
-		"start": "node ./src/server.js"
+		"start": "node index.js",
+		"dev": "nodemon index.js"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.388.0",
@@ -17,13 +17,12 @@
 		"bcrypt": "^5.1.0",
 		"cloudinary": "^1.40.0",
 		"cors": "^2.8.5",
-		"cvhub-server": "file:",
 		"data-uri": "^0.0.3",
 		"datauri": "^4.1.0",
 		"date-fns": "^2.30.0",
 		"dompurify": "^3.0.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
+		"express": "^5.1.0",
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.3",
 		"helmet": "^7.0.0",
